src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/styles.css
/* ... */
#page-header nav li.current a {
    color: #b6b6b7;
    font-weight: bold
}


/* Header - search box */
#search-box {
    float: right;
    margin: 0 5px
}

#search-box label {
    display: none
}

#search-box input[type="text"] {
    width: 128px;
    padding: 9px 6px 8px;
    font-size: 12px;
    border: 0;
    border-radius: 4px 0 0 4px;
    background: #fff;

}

#search-box input[type="submit"] {
    padding: 9px 15px 8px 10px;
    font-size: 12px;
    border: 0;
    border-radius: 0 4px 4px 0;
    background: #fff url('../images/icon_magnifier.gif') no-repeat 50% 50%
}


/* Header - userbar / sign-in menu */
#auth ul {
    float: right;
    margin-left: 10px
}

#auth li {
    float: left;
    font-size: 13px;
    font-weight: bold
}

#userbar .username {
    padding: 6px 10px;
    background-color: #292b2f
}
#userbar .username span {
    width: 60px;
    overflow: hidden;
    display: block;
}

#userbar .username a {
    color: #ccc
}

#userbar .logout {
    padding: 5px 9px
}

#userbar .logout i {
    margin: 0;
    font-size: 20px;
    color: #d0d0d0
}

#auth-menu {
    position: relative
}

#auth-menu:hover ul {
    display: block
}

#auth-menu .login {
    padding: 6px 10px 7px 8px;
    border-radius: 4px;
    background: #292b2f;
    color: #b6b6b7;
    cursor: pointer
}

#auth-menu .login img {
    margin-right: 5px
}

#auth-menu ul {
    z-index: 666;
    display: none;
    position: absolute;
    top: 30px;
    left: 0;
    margin-left: 0;
    padding: 0 1px 3px;
    border-radius: 0 0 5px 5px;
    background: #292b2f
}

#auth-menu a {
    color: #b6b6b7;
}

#auth-menu a:hover {
    color: #ccc
}


/* Content */
/* #content-wrapper {
    min-height: 150px;
    margin-bottom: 30px;
    background: #a1d4ef;
    background: -moz-linear-gradient(top, #a1d4ef 0%, #ffffff 35%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a1d4ef), color-stop(35%,#ffffff));
    background: -webkit-linear-gradient(top, #a1d4ef 0%,#ffffff 35%);
    background: -o-linear-gradient(top, #a1d4ef 0%,#ffffff 35%);
    background: -ms-linear-gradient(top, #a1d4ef 0%,#ffffff 35%);
    background: linear-gradient(to bottom, #a1d4ef 0%,#ffffff 35%);
}*/
#content-wrapper {
    min-height: 150px;
    margin-bottom: 30px;
    background: url('../images/bg.gif') repeat-x 0 0
}

#content-center {
    float: left;
    width: 100%;
}

#content-center.developer {
    background: url('../images/edgar_with_team.png') no-repeat 48% 0
}

#content-center.organization {
    background: url('../images/edgar_with_team.png') no-repeat 48% 0
}

#content-header {
    float: left;
    width: 900px;
    padding: 15px 32px 0;
}

/* Content - intro */
#intro {
    float: left;
    width: 595px;
    font-family: 'Bebas'
}

#intro h1 {
    margin: 0 0 10px;
    word-spacing: 3px;
    line-height: 40px;
    font-size: 40px;
    color: #fff
}

#intro h2 {
    margin: 0 0 10px;
    word-spacing: 2px;
    font-size: 20px;
    color: #317699
}

/* Intro - bundle description */
#intro.bundle-details, #intro.developer-details {
    margin-top: 4px;
    font: 13px Arial
}

#intro.developer-details figure {
    float: left;
    padding: 3px;
    margin: 0 15px 0 0;
    box-shadow: rgba(0, 0, 0, 0.4) 0 1px 3px 0;
    background: #c7e6f6
}

#intro.bundle-details .score {
    float: left;
    min-width: 25px;
    padding: 9px 12px;
    margin: 0 15px 0 0;
    box-shadow: rgba(0, 0, 0, 0.4) 0 1px 3px 0;
    border-radius: 7px;
    border: 6px solid #d4ecf8;
    background: #fff;
    font-size: 20px;
    font-weight: bold;
    color: #6e6e6e;
    text-align: center;
    line-height: 16px
}

#intro.bundle-details .score.award {
    color: #b05939;
    border-color: #f19370
}

#intro.bundle-details h1 {
    margin: 0;
    font: normal 25px Arial;
    line-height: 25px;
    color: #27566f
}

#intro.developer-details h1 {
    margin: 3px 0 0;
    font: normal 30px Arial;
    line-height: 30px;
    color: #27566f
}

#intro.bundle-details h2, #intro.developer-details h2 {
    font: normal 16px Arial;
    text-shadow: 1px 2px 1px #75b9dc;
    color: #fff
}

#intro.bundle-details h2 a {
    font-weight: bold;
    color: #fff
}

#intro.bundle-details p {
    line-height: 16px;
    color: #317699
}


/* Content - steps */
#steps {
    float: left;
    width: 620px;
    background: #a4d6ef;
    border: 1px solid #70b5d9;
    opacity: 0.85
}

#steps ul {
    float: left;
    margin: 0
}

#steps li {
    position: relative;
    float: left;
    padding: 18px 0 16px 30px;
    color: #21536e;
    font-size: 13px;
    font-weight: bold
}

#steps li span {
    margin: 0 5px
}

#steps li:first-child {
    padding-left: 8px
}

#steps li:after, #steps li:before, #steps li span:after, #steps li span:before {
    position: absolute;
    border: solid transparent;
    content: ' ';
    height: 0;
    left: 100%;
    top: 0;
    font-size: 0;
    line-height: 0;
    width: 0
}

#steps li:after {
    border-bottom-width: 26px;
    border-left: 26px solid #a4d6ef;
    border-top-width: 26px
}

#steps li:before {
    border-bottom-width: 27px;
    border-left: 27px solid #2cb2f9;
    border-top-width: 26px
}

#steps li.current {
    color: #4a90b7;
    background: #fff;
    border-bottom: 1px solid #89bbd3
}

#steps li.current:after {
    border-bottom-width: 26px;
    border-left: 26px solid #fff;
    border-top-width: 26px;
    top: 0;
    font-size: 0;
    line-height: 0;
    width: 0
}

#steps li:last-child:after, #steps li:last-child:before, #steps li:first-child span:after, #steps li:first-child span:before {
    border: 0
}

#steps li span:before, #steps li span:after {
    left: 0
}

#steps li.current span {
    margin: 0 6px 0 3px
}

#steps li.current span:after {
    border-bottom-width: 26px;
    border-left: 26px solid #a4d6ef;
    border-top-width: 26px
}

#steps li.current span:before {
    border-bottom-width: 27px;
    border-left: 27px solid #2cb2f9;
    border-top-width: 26px
}
/* ... */

